# ecg-analyzer

./: CMakeLists.txt  ChartTypes.h  CircularBuffer.h  JonesPlot.cpp  JonesPlot.h  JonesPlot.ui  OGLChart.cpp  OGLChart.h  QOpenGLPlotWidget.cpp  QOpenGLPlotWidget.h  QOpenGLPlotter.cpp  QOpenGLPlotter.h  README.md  ShapeData.cpp  ShapeData.h  ShapeGenerator.cpp  ShapeGenerator.h  chart_shapes_c.h  chart_types.h  conanfile.txt  index.html  main.cpp  ogl_chart_geometry_c.cpp  ogl_chart_geometry_c.h  ogl_sweep_chart_buffer.cpp  ogl_sweep_chart_buffer.h  text_renderer_2d.h
Resources/shaders/: fragment.fsh  fragment_light.fsh  fragment_text.fsh  vertex.vsh  vertex_light_2d.vsh  vertex_text.vsh
Resources/shaders/glsl_version_1_30/: fragment.fsh  vertex.vsh
includes/: CMakeLists.txt  JonesPlot.cpp  JonesPlot.h  JonesPlot.ui  OGLChart.cpp  OGLChart.h  QOpenGLPlotWidget.cpp  QOpenGLPlotWidget.h  chart_shapes_c.h  chart_types.h  circular_buffer.h  create_sig_from_file_widget.cpp  create_sig_from_file_widget.h  create_sig_from_file_widget.ui  jones_plot_app.cpp  jones_plot_app.h  list_view_dialog.cpp  list_view_dialog.h  list_view_dialog.ui  load_signal_dialog.cpp  load_signal_dialog.h  loadsignaldialog.ui  main.cpp  ogl_chart_geometry_c.cpp  ogl_chart_geometry_c.h  ogl_plot_renderer_widget.cpp  ogl_plot_renderer_widget.h  ogl_sweep_chart.cpp  ogl_sweep_chart.h  ogl_sweep_chart_buffer.cpp  ogl_sweep_chart_buffer.h  plot_model.cpp  plot_model.h  signal_model.cpp  signal_model.h  text_renderer_2d.h  time_series_player.h
includes/signal_proc_lib/: CMakeLists.txt  file_io.cpp  file_io.h  mit_file_io.cpp  mit_file_io.h  pan_topkins_qrs_detector.h  rt_state_filters.h  time_series_player.cpp  time_signal.cpp  time_signal.h
includes/tests/: CMakeLists.txt  main.cpp  pan_topkins_qrs_detector_test.h
includes/tests/signal_proc_lib/: CMakeLists.txt  main.cpp  pan_topkins_qrs_detector_test.h
includes/tests/visualization/: CMakeLists.txt  main.cpp  ogl_chart_ring_buffer_test.h  text_renderer_test.h  text_renderer_test_independent.h
includes/visualization/: CMakeLists.txt  JonesPlot.ui  ShapeData.h  ShapeGenerator.h  chart_shapes_c.h  chart_types.h  circular_buffer.h  font_c.cpp  font_c.h  font_manager_c.cpp  font_manager_c.h  jones_plot_app.cpp  jones_plot_app.h  ogl_base_chart.cpp  ogl_base_chart.h  ogl_chart_geometry_c.cpp  ogl_chart_geometry_c.h  ogl_lead_line_c.cpp  ogl_lead_line_c.h  ogl_plot_renderer_widget.cpp  ogl_plot_renderer_widget.h  ogl_sweep_chart.cpp  ogl_sweep_chart.h  ogl_sweep_chart_buffer.cpp  ogl_sweep_chart_buffer.h  plot_model.cpp  plot_model.h  text_renderer_2d.h  timer_c.h
